<resources>
    <string name="app_name">Team Space</string>
    <string name="sample_text">Sample Text</string>
    <string name="add_new_task">"Create Task"</string>
    <string name="loading">"Launching"</string>
    <string name="loading_text">"Loading..."</string>
    <string name="add_new_emp">"Add a new Employee"</string>
    <string name="hint_message">Add a comment</string>
    <string name="messages">Messages</string>
    <string name="message_details">Message Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug Settings</string>
    <string name="task_title_hint">Enter task description here</string>
    <string name="task_details_hint">Enter task details here</string>
    <string name="task_employee_title">Employee Name</string>
    <string name="add_employee">Add new employee</string>
    <string name="task_detail_page">Task Details</string>
    <string name="task_status_page">Task Status</string>
    <string name="import_from_contacts">Import From Contacts</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
	<string name="save">Save For Later</string>
    <string name="save_now">Save</string>
    <string name="create">Create Now</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="force_send">Force Send</string>
    <string name="continue_str">Continue with</string>
    <string name="enter_phone_str">Enter Phone Number</string>
    <string name="change_number">Change Phone Number</string>
    <string name="change_server">Debug Settings</string>
    <string name="pretend_phone">Hack Phone</string>
	<string name="tasks_assigned">Tasks Assigned</string>
	<string name="last_updated">Last Updated</string>
    <string name="task_employee"></string>
    <string name="task_description_title">Description</string>
    <string name="task_description_hint"></string>
    <string name="task_is_completed_title">Completed </string>
    <string name="task_is_completed_hint"></string>
    <string name="task_frequency_title">Frequency </string>
    <string name="employee_name_title">Employee Name</string>
    <string name="sent_explanation">This message was sent to the employee.</string>
    <string name="pending_explanation">This message is being processed by our servers.
        It will be sent to the employee soon. We avoid sending messages immediately to the employee
        if they are yet to reply to one of the previous messages for another task.
        Sending them multiple messages for different tasks will result in them replying in
        random order which would be difficult to track. \n\nIn rare situations, you might want to
    force send a message immediately to the employee even though he has not replied to previous
    messages. If you would like to do that, press -Force Send- button below. We recommend that you
    don\'t use this option often. \n\nNote: Force Send button will send all pending messages for
        this particular task immediately.
    </string>
    <string name="not_available">-Not Available-</string>
    <string name="employee_add_header_text">Enter Employee Details</string>
    <string name="or">OR</string>
    <string name="in_progress">UI TO BE CREATED BY PRATYUS</string>
    <string name="employee_add_contact_text">Import Employee Details</string>
    <string name="current_message_status">Current Message Status: </string>
    <string name="sent">(Sent)</string>
    <string name="pending">(In Queue)</string>
    <string name="employee_name_hint"></string>
    <string name="employee_number_title">Employee Number</string>
    <string name="employee_number_hint"></string>
    <string name="task_frequency_prompt">Choose a frequency</string>
    <string name="task_title">Title</string>
    <string name="task_subtitle">Create separate task for every new line typed above</string>
    <string name="task_reminder">Urgent Task (notify employee immediately)</string>
    <string name="registration_welcome">Welcome to \nTeam Space</string>
    <string name="task_details">Task Details</string>
    <string name="employees">Employees</string>
    <string name="add_task">Task for </string>
    <string name="add_edit_emp">New Employee</string>
    <string name="select_employees">Select Your Employees</string>
    <string name="step_1_of_2">Step 1 of 2: Choose Employee</string>
    <string name="step_2_of_2">Step 2 of 2: Fill Task Details</string>
    <string name="select_employees_detail">Please select your employees and press "Done". You can then assign tasks to the selected employees.</string>
    <string name="select_task_detail">Please enter the details for the task below.</string>
    <string name="select_employee">Please select the employee for whom you want to create the task.</string>
    <string name="task_frequency">Status Updates Needed</string>
    <string name="assigned_to">Assigned To</string>
    <string name="edit">Edit</string>
    <string name="edit_emp">Edit Employee</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="later">Later</string>
    <string name="how_to_add_emp">How to add an employee?</string>
    <string name="how_to_add_emp_ans">You can add an employee by simply typing his name and phone number.
    \n OR You can even import the employee details from your phone book / contacts. </string>
    <string name="create_employee">Create Employee</string>
    <string name="create_employee_before_task">Before creating a task, you need to select an employee first.</string>
    <string name="get_started">Lets get started</string>
    <string name="get_started_task">After adding employees, you can assign tasks to your employees.
        Click Next to create a task and assign it to an employee.</string>
    <string name="get_started_employee">Before assigning tasks to your employees, you need to add the employee details.
        Click Next to add an employee.</string>
    <string name="call">Call</string>
    <string name="warning">Warning</string>
    <string name="remind_now_warning">Please use this feature sparingly. This interferes with other reminders which have already been sent to the employee for other tasks. As a result some responses from this employee might get missed. Are you sure this task is urgent?"</string>
    <string name="create_urgent">Yes this is very urgent</string>
    <string name="call_emp">Call \n Employee</string>
    <string name="message_emp">SMS \n Employee</string>
    <string name="optional_message">Add Optional Message</string>
    <string name="optional_message_text">Add optional message explaining why this task is now up-to-date</string>
    <string name="warn_emp">You have not been replying to the SMS for the tasks assigned to you. Please reply to them regularly.</string>
    <string name="send_reminder">Send \n Reminder</string>
    <string name="mark_updated">Mark\nUpdated</string>
    <string name="mark_completed">Mark\nCompleted</string>
    <string name="reply_pending">Reply Pending</string>
    <string name="escalation_needed">Escalation Needed</string>
    <string name="pause_task">Pause</string>
    <string name="unpause_task">Unpause</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_frequency_title">Reminder Frequency</string>
    <string name="pref_start_time_title">Starting Time</string>
    <string name="pref_end_time_title">Ending Time</string>
    <string name="task_day_title">Day</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="task_creation_pending">This task creation is pending. You can edit it when you use the app next time.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="activity_dynamiclistview_header">Touch the grip or long press an item to drag.\nSwipe to dismiss.\nTap an item to insert a new item.</string>
    <string name="itemdeleted">Item deleted</string>
    <string name="taptoundo">Tap to undo</string>
    <string name="newly_added_item">This is newly added item %d</string>
    <string name="moved">\'%1$s\' moved to position %2$s</string>
    <string name="removed_positions">Removed positions: %s</string>
    <string name="employee_number">Employee number %d</string>
    <string name="task_number">Task number %d</string>
    <string name="chat_manager">Manager: </string>
    <string name="chat_employee">Employee: </string>
    <string name="todo_number">My task number %d</string>
    <string name="status_question">What is the status of task number %d?</string>
    <string name="status_answer1">It is on track</string>
    <string name="status_answer2">It is delayed</string>
    <string name="sort_by">Sort By -></string>
    <string name="country">Country</string>
    <string name="action_search">Search</string>
    <string name="search_emp">Type name to search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>
    <string name="task_force_reminder_requested">Employee will be soon reminded for this task.</string>
    <string name="task_mark_updated">This task is now marked up-to-date.</string>
    <string name="task_mark_updated_by_owner">Task marked up-to-date.</string>
    <string name="employee_creation_sms_1">You will receive SMS messages from </string>
    <string name="employee_creation_sms_2">Please reply to them regularly with the status updates for the tasks assigned to you. Regards, </string>
    <string name="task_draft_saved">Draft saved for later</string>
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Contacts Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_employees">No Employees Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="error_task_draft_failed">Sorry, could not save the draft due to network error.</string>
    <string name="error_employee_deletion_failed">Sorry, could not delete the employee due to server error.</string>
    <string name="error_employee_update_failed">Sorry, could not update the employee due to server error.</string>
    <string name="error_employee_create_failed">Sorry, could not create the employee due to server error.</string>
    <string name="error_employee_not_available">Sorry, either the name or phone number was not available.</string>
    <string name="error_employee_not_valid">Sorry, could not find the Employee selected.</string>
    <string name="error_task_update_failed">Sorry, could not save the task due to network error.</string>
    <string name="error_task_create_failed">Sorry, could not create task due to network error.</string>
</resources>