<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <include layout="@layout/add_task_header"
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        </include>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/task_title"
            android:textStyle="bold"
            android:textColor="@color/header_background"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title_hint"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/assigned_to"
            android:textStyle="bold"
            android:textColor="@color/header_background"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/employee_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/task_frequency"
            android:textStyle="bold"
            android:textColor="@color/header_background"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/task_details"
            android:textStyle="bold"
            android:textColor="@color/header_background"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/task_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_details_hint"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/button_color"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>