<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto" >
    <!--<item android:id="@+id/action_add"-->
          <!--android:icon="@drawable/ic_action_new"-->
          <!--myapp:showAsAction="always" -->
          <!--android:title="@string/action_add" />-->
    <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_refresh"/>
	<!--<item android:id="@+id/action_search"-->
          <!--android:icon="@drawable/ic_action_search"-->
          <!--android:title="@string/action_search"/>-->
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"/>

    <item android:id="@+id/action_debug"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_debug"/>


 </menu>