<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include
        layout="@layout/add_emp_header"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <include
        layout="@layout/employee_add_header"
        android:layout_marginTop="10dp"
        android:id="@+id/option_1"
        android:layout_width="match_parent"
        android:layout_below="@id/header"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_below="@id/option_1"
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:text="@string/or"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_below="@id/or"
        android:background="@color/list_background"
        android:padding="10dp"
        android:id="@+id/option_2"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/header_background"
            android:text="@string/employee_add_contact_text"
            android:textStyle="bold"
            android:textSize="16sp" />

        <Button
            android:id="@+id/pickcontact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/button_color"
            android:gravity="center"
            android:text="@string/import_from_contacts"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/name_from_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/header_background"
            android:text="@string/employee_name_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/number_from_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/header_background"
            android:text="@string/employee_number_title"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/employee_button"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/button_color"
        android:gravity="center"
        android:text="@string/done"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>