<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/header_background"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_welcome"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="38sp" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/button_color"
        android:gravity="center"
        android:text="@string/continue_str"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/change_phone_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/change_number"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/change_server_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/change_server"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
</LinearLayout>
