<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/list_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/option_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/header_background"
                android:text="@string/current_message_status"
                android:textStyle="bold"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/check_mark"
                android:layout_marginLeft="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_action_accept_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/header_background"
                android:text="@string/sent"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/name_from_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/header_background"
            android:text="@string/pending_explanation"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/button_color"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@android:color/white"
                android:layout_weight="0.5"
                android:textSize="18sp" />

            <Button
                android:id="@+id/force_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@android:color/holo_red_light"
                android:gravity="center"
                android:layout_weight="0.5"
                android:text="@string/force_send"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>